Information Bar Missing Data when in Sculpt Mode in 2.80 Beta #59478

Closed
opened 2018-12-17 02:19:41 +01:00 by John · 6 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia 980 Ti

Blender Version
Broken: 2.80, 4488056f3d, blender 2.80 beta 2018-12-16 00:27

Short description of error

When in sculpt mode in blender 2.80 beta, the information bar at the bottom right of the screen that shows geometry data on your selection is "0"s for all geometry data and also doesn't show which collection the selection is in.

Exact steps for others to reproduce the error

Based on the default start up. Screenshot shown below:

Blender2_8Bug_SculptModeInfoBar.jpg

**System Information** Operating system: Windows 10 Graphics card: Nvidia 980 Ti **Blender Version** Broken: 2.80, 4488056f3d9, blender 2.80 beta 2018-12-16 00:27 **Short description of error** When in sculpt mode in blender 2.80 beta, the information bar at the bottom right of the screen that shows geometry data on your selection is "0"s for all geometry data and also doesn't show which collection the selection is in. **Exact steps for others to reproduce the error** Based on the default start up. Screenshot shown below: ![Blender2_8Bug_SculptModeInfoBar.jpg](https://archive.blender.org/developer/F5975841/Blender2_8Bug_SculptModeInfoBar.jpg)
Author

Added subscriber: @Tornado_Bird

Added subscriber: @Tornado_Bird

Added subscriber: @ZedDB

Added subscriber: @ZedDB

You need to be a bit more specific on how to reproduce this.

If I go into sculpt mode and sculpt, the vert could etc is up to date for me. So I can't reproduce this with the current instructions.

You need to be a bit more specific on how to reproduce this. If I go into sculpt mode and sculpt, the vert could etc is up to date for me. So I can't reproduce this with the current instructions.
Author

Sorry, I just realized two things. 1. This only happens when a multires modifier with at least one subdivision is on the object. 2. The collection part not showing up is because I guess that only shows up in object mode?

Sorry, I just realized two things. 1. This only happens when a multires modifier with at least one subdivision is on the object. 2. The collection part not showing up is because I guess that only shows up in object mode?
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-17 16:32:03 +01:00

This issue was referenced by 6ccf961915

This issue was referenced by 6ccf9619153ea412c7a8c320a3d59d9ec50600c8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59478
No description provided.